fixed modal issue on mobile

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -19,8 +19,8 @@
 }
 
 @media all and (max-width: 700px) {
-  body {
-    margin: 2vh 2vh;
+  header, footer {
+    margin: 1.5vh 1.5vh;
   }
 
   #about{
